version 10.0
date: dd/mm/yyyy
  * allowed ordinary services in custom reports
  * implemented a content storage service
  * renamed the service compileAndDownloadReport to compileAndExportReport, while allowing to indicate an optional deployer
  * added time machine
  * added undo management
  * added the possibility in the advancedSearch to not pass the predicate in predicate-object where the object can be text-searched
  * allowed to disable validation on commit in projects with SHACL validation enabled
  * introduced batch SHACL validation of a repository producing a validation report
  * replaced the connector to the EU Open Data Portal (being dismissed) with a connector to the data.europa.eu portal
  * added configuration parameters for SHACL
  * added inconsistency report
  * added file from http://prefix.cc/ containing most used prefix-namespace to resolve most used namespaces 
  * added the Spreadsheet lifter to load data from a spreadsheet
  * update core settings to the new settings management framework (including the use of YAML to persist them)
  * upgrade the PUSettings of the RenderingEngine extension point to the new framework (including the use of YAML to persist them)
  * implemented resource view custom sections and enabled the customization of the resource view associated with a role
  * implemented the support for Java enums in STProperties
  * implemented labels support for project rendering
  * implemented support for email verification during the user registration procedure
  * allowed administrator to activate a new registered user through a link sent via email
  * allowed administrator to enable remote provisioning of CODA components
  * in Sheet2RDF extended support for triples deletion
  * implemented support for EU-Login
  * added Scottish Gaelic and Welsh to the system languages
  * turned OperationOnResourceDeniedException into a RuntimeException as it may be thrown from an interceptor